<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sanskruti.volotek.ui.activities.ContactUsActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/bg_screen"
            app:layout_constraintBottom_toTopOf="@+id/ll_adview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/login_name"
                    android:textColor="@color/black"
                    app:fonts='@{"bold"}'
                    app:textSize='@{"font_body_size"}' />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:textColorHint="@color/gray"
                    app:fonts='@{"normal"}'
                    app:textSize='@{"font_body_size"}' />

                <TextView
                    android:id="@+id/textViewsign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/login_email"
                    android:textColor="@color/black"
                    app:fonts='@{"bold"}'
                    app:textSize='@{"font_body_size"}' />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:textColorHint="@color/gray"
                    app:fonts='@{"normal"}'
                    app:textSize='@{"font_body_size"}' />

                <TextView
                    android:id="@+id/textViewsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/login_phone_number"
                    android:textColor="@color/black"
                    app:fonts='@{"bold"}'
                    app:textSize='@{"font_body_size"}' />

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/hint_phone_number"
                    android:inputType="number"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:textColorHint="@color/gray"
                    app:fonts='@{"normal"}'
                    app:textSize='@{"font_body_size"}' />


                <TextView
                    android:id="@+id/textViewi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/massage"
                    android:textColor="@color/black"
                    app:fonts='@{"bold"}'
                    app:textSize='@{"font_body_size"}' />

                <EditText
                    android:id="@+id/et_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/edit_bg"
                    android:gravity="top"
                    android:hint="@string/enter_details"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:textColorHint="@color/gray"
                    app:fonts='@{"normal"}'
                    app:textSize='@{"font_body_size"}' />


                <TextView
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:background="@drawable/round_bg"
                    android:backgroundTint="@color/active_color"
                    android:paddingHorizontal="@dimen/_70sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/al_white"
                    android:fontFamily="@font/nunito_sans_semibold"
                    app:textSize='@{"button_text_16"}' />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/ll_adview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>