<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp"
    android:background="@drawable/button_save"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ss"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/txterorr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="7.0dip"
            android:layout_marginTop="7.0dip"
            android:layout_marginEnd="7.0dip"
            android:layout_marginBottom="7.0dip"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/error"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:typeface="serif" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/kk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ss"
        android:layout_marginStart="10.0dip"
        android:layout_marginTop="10.0dip"
        android:layout_marginEnd="10.0dip"
        android:layout_marginBottom="10.0dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_error"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kk"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10.0dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok_e"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:layout_weight="1.0"
            android:backgroundTint="@color/dialog_btn_color"
            android:clickable="true"
            android:padding="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_7sdp"

            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:layout_weight="1.0"
            android:backgroundTint="@color/active_color"
            android:clickable="true"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/txt_conti"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:typeface="serif" />
    </LinearLayout>
</RelativeLayout>