<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/overlay_artwork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/item_frame"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/no_data_layout"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:lottie_fileName="no_data_anim.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:layout_marginTop="@dimen/_2sdp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_item_found"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/no_personalFrameFound"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_7sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_personal_frame_found"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/get_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_3sdp"
                android:paddingHorizontal="@dimen/_9sdp"
                android:paddingVertical="@dimen/_4sdp"
                android:text="@string/get_your_frame"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>