<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sweet="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    sweet:cardBackgroundColor="@color/dialog_color"
    sweet:cardCornerRadius="@dimen/_20sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/add_image"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    sweet:layout_constraintBottom_toBottomOf="parent"
                    sweet:layout_constraintEnd_toEndOf="parent"
                    sweet:layout_constraintHorizontal_bias="0.498"
                    sweet:layout_constraintStart_toStartOf="parent"
                    sweet:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btnCancel"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_close"
                    sweet:layout_constraintEnd_toEndOf="parent"
                    sweet:layout_constraintTop_toTopOf="parent"
                    sweet:tint="@color/black" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/auto_fit_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:ems="10"
                android:fontFamily="@font/nunito_sans_light"
                android:gravity="center"
                android:text="@string/select_image_msg"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_5sdp">

                <TextView
                    android:id="@+id/btnCamera"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:background="@drawable/button_shape"
                    android:backgroundTint="@color/pink_500"
                    android:text="@string/camera"
                    android:textAllCaps="false"
                    android:textColor="@color/al_white"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/btnGallery"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/button_shape"
                    android:backgroundTint="@color/active_color"
                    android:text="@string/Gallery"
                    android:textAllCaps="false"
                    android:textColor="@color/al_white"
                    android:textSize="@dimen/_10sdp" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
